# biomolecular-clique-finding

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_IMPUTATION_CORRELATION.md  CHANGELOG_METADATA_PROPAGATION.md  CLINICAL_METADATA_INTEGRATION.md  CLIQUE_NETWORK_README.md  FEATURE_CHECKLIST.md  GENE_FLOW_IMPLEMENTATION.md  GLOSSARY.md  IMPLEMENTATION_SUMMARY.md  LOG_TRANSFORM_REFACTORING.md  METADATA_FLOW_DIAGRAM.md  METADATA_PROPAGATION_IMPLEMENTATION.md  MYGENE_RESEARCH_FINDINGS.md  OPTIMIZATION_SUMMARY.md  PLATFORM_SPEC.md  QUICK_START_METADATA.md  README.md  VISUALIZATION_REQUIREMENTS_SPEC.md  example_clique_network.py  example_normalization_usage.py  example_protein_differential.py  pyproject.toml  requirements.txt  test_clique_network.py  test_full_workflow.py  test_genetic_contrast.py  test_log_transform_workflow.py  test_regulator_overview.py  test_stratum_heatmap.py  uniprot_mapping_fixed_example.py
cohorts/: c9orf72_vs_sporadic.yaml  three_group_als.yaml
configs/: INTEGRATION_TEST.md  README.md  USAGE_EXAMPLES.md  minimal_example.yaml  proteomics_als.json  proteomics_als.yaml  schema.yaml
docs/: ADAPTIVE_OUTLIER_HANDLING_PLAN.md  BATCHED_OLS_IMPLEMENTATION.md  BATCHED_OLS_QUICK_REF.md  BOOTSTRAP_IMPLEMENTATION.md  BOOTSTRAP_QUICK_REFERENCE.md  CLIQUE_OPTIMIZATION_PLAN.md  CORRELATION_SIGN_PRESERVATION_SPEC.md  CROSS_MODAL_DESIGN.md  DIRECTION_AWARE_BOOTSTRAP_SPEC.md  DIRECTION_AWARE_IMPLEMENTATION_NOTES.md  README.md  REGULATOR_OVERVIEW_PLOT.md  REGULATOR_OVERVIEW_QUICK_REF.md  RESULTS_GLOSSARY.md  RNA_LOADER_USAGE.md  ROAST_IMPLEMENTATION.md  TEST_FAILURE_ANALYSIS.md  (+1 more)
(+251 files in other folders)
